# perameter-scraper

./: .gitignore  FORMATOR.PY  abc.py  ai_mode.py  cleaner.py  input.json  main.py  main2.py  pyproject.toml  temp.py  test.py
config/: prompt_template.py  settings.py
dataX/extracted_text/WEDDING_PLANNERS/Alwar/: 1609_wedding_planning_solutions_jaipur.txt  7_sky_events.txt  abhimanyu_events.txt  alwar_birthday_decor.txt  amazing_events.txt  anuj_agarwal_events.txt  balaji_event_bansur_kotputli_sariska_neemrana_jaipur.txt  balaji_events.txt  belly_dancers.txt  bittu_maharaj_kitchen.txt  film_production_wedding_planner.txt  footprint_events.txt  fusion_festivites_event_planners.txt  goyal_marriage_event.txt  gulab_marriage_events_kherli.txt  jeetu_the_best_dj_events.txt  karni_decor.txt  lovely_flowers_art_events.txt  luxe_moments_events.txt  manglam_event.txt  mj_events_entertainment.txt  naira_event_management.txt  naira_event_management_and_services.txt  natraj_cards.txt  nazrana_kala_sansthan_dance_theme_house.txt  om_events.txt  paras_party_products_and_props.txt  perfect_planing.txt  pooja_marriage_event.txt  rajasthan_tent_house.txt  ram_s_event.txt  roli_moli_events_wedding_planner.txt  saffron_wedding_planner.txt  sapna_event_sahodi.txt  shri_gyani_farm.txt  siddharth_enterprises.txt  trc_events.txt
dataX/output/WEDDING_PLANNERS/Alwar/: 7_sky_events.json  (+36 more)
enrichment/: gemini_client.py  prompt_template.py
logs/html/: rams_event.html
models/: json_models.py  search_models.py
scraper/: query_builder.py  scraper.py
utils/: logging_config.py  models.py
(+37 files in other folders)
