[project]
name = "master-perameter-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "bs4>=0.0.2",
    "google-genai>=2.8.0",
    "lxml>=6.1.1",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.2",
    "selenium>=4.45.0",
    "tabulate>=0.10.0",
    "webdriver-manager>=4.1.2",
]
